--- a/style.css
+++ b/style.css
@@ -80,7 +80,53 @@ color: white;
     text-decoration: none;     
     background-color:rgb(204, 210, 218) ;
 }
- 
+
+/* dropdown css */
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  margin-top: 12px;
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  border-left: 3px solid rgb(40, 137, 228);
+  border-top: 3px solid rgb(40, 137, 228);
+  min-width: 200px;
+  border-radius: 10px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: rgb(109, 106, 106);
+  padding: 8px 14px;
+  text-decoration: none;
+  font-size: 14px;
+  display: block;
+}
+.dropdown-content .dropdown-hover:hover {
+  box-shadow: none;
+  background-color: rgb(157, 162, 168);
+  border-radius: 0px;
+  border-radius: 10px;
+
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+
 .main-sec{
     width: 100%;
     height: 100vh;
